--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,28 @@
 - update zen coding plugin: http://www.vim.org/scripts/script.php?script_id=2981
--get familiar with surround
--fix vim exiting with error code 1
+- get familiar with surround
+- fix vim exiting with error code 1
+- learn to use easy motion
 
 #########FUTURE plugins to look into ##########
 - SuperTab
 - snipmate
+
+" map Ctrl+Space as Escape key
+"noremap <C-Space> <Esc> // currently doing some sort of paste if no edit is made
+
+
+" map <space> to act like a web browser's page down
+"nnoremap <space> <PageDown>
+"nnoremap <S-space> <C-u> "TODO: figured out how to configure terminal to send proper code
+"vnoremap <space> <PageDown>
+"vnoremap <S-space> <C-u>
+
+
+" auto complete brackets // TODO: find better alternative...these interfere when pasting code
+"inoremap {      {}<Left>
+"inoremap {<CR>  {<CR>}<Esc>O
+"inoremap {{     {
+"inoremap {}     {}
+"inoremap {%     {%%}<Left><Left>
+"inoremap {{     {{}}<Left><Left>
+"inoremap {}     {}
