--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,8 @@
 - get familiar with surround
 - fix vim exiting with error code 1
 - learn to use easy motion
+- add python support (and maybe Ruby)
+- install fuzzyfinder
 
 #########FUTURE plugins to look into ##########
 - SuperTab
