--- a/TODO.txt
+++ b/TODO.txt
@@ -3,11 +3,11 @@
     - remap window moving (CTRL-K, CTRL-L)
     - remove <f1> mappings
 - get familiar with surround
-- learn to use easy motion
 - add python support (and maybe Ruby)
 - figure out why FuzzyFinder is so slow/stalling
 - add emacs Ctrl-A, Ctrl-E, etc. mapping in command line (see Tim Pope's .vimrc?)
 - try vim-multiple-cursors (https://github.com/terryma/vim-multiple-cursors)
+- try vim-multicursor instead https://github.com/paradigm/vim-multicursor
 
 #########FUTURE plugins to look into ##########
 - SuperTab
