--- a/TODO.txt
+++ b/TODO.txt
@@ -10,8 +10,7 @@
     - remove <f1> mappings
 - get familiar with surround
 - add python support (and maybe Ruby)
-- figure out why FuzzyFinder is so slow/stalling
-- add emacs Ctrl-A, Ctrl-E, etc. mapping in command line (see Tim Pope's .vimrc?)
+- find better file/path management plugin (LustyExplorer? FuzzyFinder? CtrlP?)
 - try vim-multiple-cursors (https://github.com/terryma/vim-multiple-cursors)
 - try vim-multicursor instead https://github.com/paradigm/vim-multicursor
 
