--- a/TODO.txt
+++ b/TODO.txt
@@ -22,4 +22,4 @@
     - mabye unite's outline plugin
 - auto complete brackets // TODO: find better alternative...these interfere when pasting code
 - find a good plugin to comment out lines of code
-
+- look into browser reload plugin: https://github.com/tell-k/vim-browsereload-mac
