several zsh and tmux fixes for new MBP

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,7 @@
+## New MacBook Pro
+- restore tmux powerline
+- fix vim background color in html files
+
 ## General
 - add bash_profile to repo
 - look into wemux
